--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "web-build-tools",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Web build tools",
+  "dependencies": {},
+  "devDependencies": {
+    "@microsoft/rush": "~2.5.0"
+  },
   "scripts": {
     "test": "rush build --production",
     "build": "rush build --production --clean",
+    "postinstall": "rush install",
     "change": "rush change"
-  },
-  "devDependencies": {
-    "@microsoft/rush": "~2.4.0"
   }
 }
