--- a/common/temp_modules/rush-rush/package.json
+++ b/common/temp_modules/rush-rush/package.json
@@ -12,6 +12,7 @@
     "@types/minimatch": "2.0.29",
     "@types/mocha": "2.2.38",
     "@types/node": "6.0.62",
+    "@types/semver": "5.3.31",
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
     "@microsoft/stream-collator": "~2.0.0",
@@ -33,6 +34,6 @@
   "rushDependencies": {
     "@microsoft/node-library-build": ">=3.0.0 <4.0.0",
     "@microsoft/package-deps-hash": "~2.0.1",
-    "@microsoft/rush-lib": "2.4.0"
+    "@microsoft/rush-lib": "2.5.0"
   }
 }
