--- a/loader-set-webpack-public-path/tsconfig.json
+++ b/loader-set-webpack-public-path/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "jsx": "react",
     "declaration": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "strictNullChecks": true
   }
 }
