--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,16 @@
 language: node_js
 node_js:
-  - '4.6'
+  - '6.9'
 before_script:
-  - npm install -g gulp
+  - node common/scripts/InstallRushOnlyIfNeeded.js
 script:
   - echo 'Checking change file...' && echo -en 'travis_fold:start:check\\r'
   - git fetch origin master:refs/remotes/origin/master -a
-  - node node_modules/@microsoft/rush/lib/rush.js change -v
+  - node common/local-rush/node_modules/@microsoft/rush/lib/rush.js change -v
   - echo -en 'travis_fold:end:check\\r'
   - echo 'Installing...' && echo -en 'travis_fold:start:install\\r'
-  - node node_modules/@microsoft/rush/lib/rush.js install --bypass-policy
+  - node common/local-rush/node_modules/@microsoft/rush/lib/rush.js install --bypass-policy
   - echo -en 'travis_fold:end:install\\r'
-  - echo 'Linking...' && echo -en 'travis_fold:start:link\\r'
-  - node node_modules/@microsoft/rush/lib/rush.js link
-  - echo -en 'travis_fold:end:link\\r'
   - echo 'Building...' && echo -en 'travis_fold:start:build\\r'
-  - node node_modules/@microsoft/rush/lib/rush.js rebuild --verbose --production
+  - node common/local-rush/node_modules/@microsoft/rush/lib/rush.js rebuild --verbose --production
   - echo -en 'travis_fold:end:build\\r'
-
