Remove optional dependency and have rush install skip optional

--- a/web-library-build/package.json
+++ b/web-library-build/package.json
@@ -28,8 +28,5 @@
     "gulp": "~3.9.1",
     "gulp-replace": "^0.5.4"
   },
-  "devDependencies": {},
-  "optionalDependencies": {
-    "fsevents": "*"
-  }
+  "devDependencies": {}
 }
