--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/load-themed-styles",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Loads themed styles.",
   "license": "MIT",
   "repository": {
@@ -11,8 +11,11 @@
   "keywords": [],
   "dependencies": {},
   "devDependencies": {
-    "chai": "^3.5.0",
-    "gulp": "^3.9.1",
-    "@microsoft/node-library-build": "~0.2.2"
+    "@types/chai": "3.4.34",
+    "@types/mocha": "2.2.38",
+    "@types/webpack-env": "1.13.0",
+    "chai": "~3.5.0",
+    "gulp": "~3.9.1",
+    "@microsoft/node-library-build": "~3.0.1"
   }
 }
