--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "forceConsistentCasingInFileNames": true,
     "module": "commonjs",
     "jsx": "react",
     "declaration": true,
     "sourceMap": true,
     "experimentalDecorators": true,
-    "noEmitOnError": false,
-    "moduleResolution": "node"
+    "types": [
+      "webpack-env"
+    ],
+    "strictNullChecks": true
   }
 }
