--- a/libraries/api-extractor/package.json
+++ b/libraries/api-extractor/package.json
@@ -2,6 +2,21 @@
   "name": "@microsoft/api-extractor",
   "version": "2.0.6",
   "description": "Validate, document, and review the exported API for a TypeScript library",
+  "keywords": [
+    "typescript",
+    "API",
+    "JSDoc",
+    "generate",
+    "documentation",
+    "compiler",
+    "alpha",
+    "beta"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/web-build-tools"
+  },
+  "homepage": "http://aka.ms/extractor",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "license": "MIT",
