--- a/libraries/package-deps-hash/package.json
+++ b/libraries/package-deps-hash/package.json
@@ -14,6 +14,9 @@
     "clean": "gulp clean",
     "test": "gulp test"
   },
+  "dependencies": {
+    "@types/es6-collections": "0.5.29"
+  },
   "devDependencies": {
     "@microsoft/node-library-build": ">=3.0.1 <4.0.0",
     "chai": "~3.5.0",
