--- a/libraries/package-deps-hash/tsconfig.json
+++ b/libraries/package-deps-hash/tsconfig.json
@@ -7,7 +7,8 @@
     "moduleResolution": "node",
     "types": [
       "node",
-      "mocha"
+      "mocha",
+      "es6-collections"
     ]
   }
 }
