--- a/libraries/stream-collator/package.json
+++ b/libraries/stream-collator/package.json
@@ -2,6 +2,10 @@
   "name": "@microsoft/stream-collator",
   "version": "2.0.1",
   "description": "Display intelligible realtime output from your asynchronous streams",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/web-build-tools"
+  },
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
@@ -10,7 +14,6 @@
     "clean": "gulp clean"
   },
   "license": "MIT",
-  "homepage": "http://aka.ms/spfx",
   "dependencies": {
     "colors": "~1.1.2",
     "@types/node": "6.0.64"
