--- a/libraries/ts-command-line/package.json
+++ b/libraries/ts-command-line/package.json
@@ -2,6 +2,10 @@
   "name": "@microsoft/ts-command-line",
   "version": "2.0.1",
   "description": "An object-oriented command-line parser for TypeScript",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/web-build-tools"
+  },
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
@@ -10,7 +14,6 @@
     "clean": "gulp clean"
   },
   "license": "MIT",
-  "homepage": "http://aka.ms/spfx",
   "dependencies": {
     "argparse": "~1.0.7",
     "colors": "~1.1.2",
