Add decorators, stream-collator, and ts-command-line to rush.json and convert to use web-library-build / node-library-build

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -70,6 +70,10 @@
       "allowedCategories": [ "libraries", "other" ]
     },
     {
+      "name": "argparse",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "autoprefixer",
       "allowedCategories": [ "libraries" ]
     },
