--- a/libraries/ts-command-line/package.json
+++ b/libraries/ts-command-line/package.json
@@ -17,13 +17,13 @@
   "dependencies": {
     "argparse": "~1.0.7",
     "colors": "~1.1.2",
-    "@types/node": "6.0.64"
+    "@types/node": "6.0.62"
   },
   "devDependencies": {
     "@types/es6-collections": "0.5.29",
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
     "mocha": "~2.5.3",
-    "@microsoft/sp-build-node": "~1.1.0"
+    "@microsoft/node-library-build": ">=3.0.1 <4.0.0"
   }
 }
