--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,9 @@ before_script:
 script:
   - echo 'Checking change file...' && echo -en 'travis_fold:start:check\\r'
   - git fetch origin master:refs/remotes/origin/master -a
-  - node node_modules/@microsoft/rush/lib/rush.js change -v
+  - npm run change -- -v
   - echo -en 'travis_fold:end:check\\r'
-  - echo 'Installing...' && echo -en 'travis_fold:start:install\\r'
-  - node node_modules/@microsoft/rush/lib/rush.js install --bypass-policy
-  - echo -en 'travis_fold:end:install\\r'
   - echo 'Building...' && echo -en 'travis_fold:start:build\\r'
-  - node node_modules/@microsoft/rush/lib/rush.js rebuild --production
+  - npm run rebuild
   - echo -en 'travis_fold:end:build\\r'
 
