--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "description": "Webpack loaders",
   "scripts": {
-    "_rushInstall": "node node_modules/@microsoft/rush/bin/rush install -c",
+    "_rushInstall": "node node_modules/@microsoft/rush/bin/rush install --bypass-policy -c",
     "_rushBuild": "node node_modules/@microsoft/rush/bin/rush build",
     "_rushRebuild": "node node_modules/@microsoft/rush/bin/rush rebuild --production --verbose",
-    "postinstall": "npm run _rushInstall --bypass-policy",
+    "postinstall": "npm run _rushInstall",
     "change": "node node_modules/@microsoft/rush/bin/rush change",
     "rebuild": "npm run _rushRebuild",
     "build": "npm run _rushBuild"
