--- a/libraries/load-themed-styles/package.json
+++ b/libraries/load-themed-styles/package.json
@@ -4,7 +4,12 @@
   "description": "Loads themed styles.",
   "license": "MIT",
   "repository": {
-    "url": "https://github.com/Microsoft/load-themed-styles"
+    "url": "https://github.com/Microsoft/web-build-tools"
+  },
+  "scripts": {
+    "build": "gulp bundle",
+    "clean": "gulp clean",
+    "test": "gulp test"
   },
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
