--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -28,7 +28,7 @@
     "z-schema": "~3.17.0"
   },
   "devDependencies": {
-    "@microsoft/node-library-build": ">=3.0.1 <4.0.0",
+    "@microsoft/node-library-build": "~3.0.1",
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
     "mocha": "~3.4.2",
