--- a/apps/rush/package.json
+++ b/apps/rush/package.json
@@ -46,7 +46,7 @@
     "wordwrap": "~1.0.0"
   },
   "devDependencies": {
-    "@microsoft/node-library-build": ">=3.0.1 <4.0.0",
+    "@microsoft/node-library-build": "~3.0.1",
     "@types/chai": "3.4.34",
     "@types/es6-collections": "0.5.29",
     "@types/fs-extra": "0.0.37",
