--- a/core-build/gulp-core-build-typescript/package.json
+++ b/core-build/gulp-core-build-typescript/package.json
@@ -40,7 +40,7 @@
     "typescript": "~2.2.2"
   },
   "devDependencies": {
-    "@microsoft/node-library-build": ">=3.0.1 <4.0.0",
+    "@microsoft/node-library-build": "~3.0.1",
     "@types/gulp-util": "3.0.30",
     "@types/orchestrator": "0.0.30",
     "@types/q": "0.0.32",
