--- a/libraries/ts-command-line/package.json
+++ b/libraries/ts-command-line/package.json
@@ -23,7 +23,7 @@
     "@types/es6-collections": "0.5.29",
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
-    "mocha": "~2.5.3",
-    "@microsoft/node-library-build": ">=3.0.1 <4.0.0"
+    "mocha": "~3.4.2",
+    "@microsoft/node-library-build": "~3.0.1"
   }
 }
