--- a/webpack/loader-load-themed-styles/package.json
+++ b/webpack/loader-load-themed-styles/package.json
@@ -16,6 +16,8 @@
     "@microsoft/load-themed-styles": "~1.4.0"
   },
   "devDependencies": {
+    "@types/mocha": "2.2.38",
+    "@types/node": "6.0.62",
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
     "@microsoft/node-library-build": "~3.0.1"
