--- a/webpack/loader-raw-script/package.json
+++ b/webpack/loader-raw-script/package.json
@@ -15,6 +15,8 @@
     "loader-utils": "~1.1.0"
   },
   "devDependencies": {
+    "@types/mocha": "2.2.38",
+    "@types/node": "6.0.62",
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
     "mocha": "~3.4.2",
