Enabling StrictNullChecks for the rest of GCB.

--- a/core-build/web-library-build/tsconfig.json
+++ b/core-build/web-library-build/tsconfig.json
@@ -5,6 +5,7 @@
     "declaration": true,
     "sourceMap": true,
     "moduleResolution": "node",
+    "strictNullChecks": true,
     "types": [
       "node"
     ]
