--- a/core-build/gulp-core-build-mocha/tsconfig.json
+++ b/core-build/gulp-core-build-mocha/tsconfig.json
@@ -5,6 +5,7 @@
     "jsx": "react",
     "declaration": true,
     "sourceMap": true,
+    "strictNullChecks": true,
     "types": [
       "node"
     ]
