--- a/core-build/gulp-core-build-typescript/tsconfig.json
+++ b/core-build/gulp-core-build-typescript/tsconfig.json
@@ -6,6 +6,7 @@
     "declaration": true,
     "sourceMap": true,
     "moduleResolution": "node",
+    "strictNullChecks": true,
     "types": [
       "node"
     ]
