--- a/core-build/node-library-build/tsconfig.json
+++ b/core-build/node-library-build/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "declaration": true,
     "sourceMap": true,
+    "strictNullChecks": true,
     "types": [
       "node"
     ]
