--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -23,6 +23,7 @@
     "@types/z-schema": "3.16.31",
     "fs-extra": "~0.26.7",
     "jju": "~1.3.0",
+    "lodash": "~4.15.0",
     "rimraf": "~2.5.4",
     "semver": "~5.3.0",
     "z-schema": "~3.17.0"
@@ -33,6 +34,7 @@
     "gulp": "~3.9.1",
     "mocha": "~2.5.3",
     "sinon": "~1.17.3",
+    "@types/lodash": "4.14.52",
     "@types/sinon": "1.16.34",
     "@types/mocha": "2.2.38",
     "@types/chai": "3.4.34",
