Add an explicit version to downgrade @types/bluebird

--- a/core-build/gulp-core-build-karma/package.json
+++ b/core-build/gulp-core-build-karma/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@microsoft/node-library-build": "~3.0.1",
     "@types/gulp": "3.8.32",
-    "@types/karma": "0.13.33"
+    "@types/karma": "0.13.33",
+    "@types/bluebird": "3.5.3"
   }
 }
