--- a/apps/rush/package.json
+++ b/apps/rush/package.json
@@ -41,6 +41,7 @@
     "inquirer": "~1.2.1",
     "lodash": "~4.15.0",
     "minimatch": "~3.0.2",
+    "npm-package-arg": "~5.1.2",
     "read-package-tree": "~5.1.5",
     "semver": "~5.3.0",
     "wordwrap": "~1.0.0"
