Including JsonSchemaToTsTask in GCB-TypeScript.

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -234,6 +234,10 @@
       "allowedCategories": [ "libraries" ]
     },
     {
+      "name": "json-schema-to-typescript",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "karma",
       "allowedCategories": [ "libraries" ]
     },
