--- a/core-build/gulp-core-build-typescript/package.json
+++ b/core-build/gulp-core-build-typescript/package.json
@@ -21,6 +21,7 @@
     "@types/node": "6.0.62",
     "fs-extra": "~0.26.7",
     "@types/fs-extra": "0.0.37",
+    "glob": "~7.0.5",
     "gulp": "~3.9.1",
     "gulp-cache": "~0.4.5",
     "gulp-changed": "~1.3.2",
@@ -30,6 +31,7 @@
     "gulp-texttojs": "~1.0.3",
     "gulp-typescript": "~3.1.6",
     "gulp-util": "~3.0.7",
+    "json-schema-to-typescript": "~4.4.1",
     "lodash": "~4.15.0",
     "md5": "~2.2.1",
     "merge2": "~1.0.2",
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@microsoft/node-library-build": "~3.0.1",
+    "@types/glob": "5.0.30",
     "@types/gulp-util": "3.0.30",
     "@types/orchestrator": "0.0.30",
     "@types/q": "0.0.32",
