--- a/core-build/gulp-core-build-typescript/tsconfig.json
+++ b/core-build/gulp-core-build-typescript/tsconfig.json
@@ -8,6 +8,12 @@
     "moduleResolution": "node",
     "types": [
       "node"
+    ],
+    "lib": [
+      "es5",
+      "scripthost",
+      "es2015.promise",
+      "dom"
     ]
   }
 }
