First step toward upgrading typescript to 2.4.x

--- a/core-build/gulp-core-build-typescript/package.json
+++ b/core-build/gulp-core-build-typescript/package.json
@@ -35,12 +35,12 @@
     "merge2": "~1.0.2",
     "object-assign": "~4.1.0",
     "through2": "~2.0.1",
-    "tslint": "~4.5.1",
-    "tslint-microsoft-contrib": "~4.0.0",
-    "typescript": "~2.2.2"
+    "tslint": "~5.5.0",
+    "tslint-microsoft-contrib": "~5.0.0",
+    "typescript": "2.4.1"
   },
   "devDependencies": {
-    "@microsoft/node-library-build": "~3.0.1",
+    "@microsoft/node-library-build": "~3.1.0",
     "@types/gulp-util": "3.0.30",
     "@types/orchestrator": "0.0.30",
     "@types/q": "0.0.32",
