--- a/core-build/node-library-build/package.json
+++ b/core-build/node-library-build/package.json
@@ -15,6 +15,7 @@
     "test": "gulp"
   },
   "dependencies": {
+    "@types/es6-collections": "0.5.29",
     "@microsoft/gulp-core-build": ">=2.7.0 <3.0.0",
     "@microsoft/gulp-core-build-mocha": ">=2.1.0 <3.0.0",
     "@microsoft/gulp-core-build-typescript": ">=3.2.0 <4.0.0",
