--- a/libraries/api-extractor/package.json
+++ b/libraries/api-extractor/package.json
@@ -32,7 +32,7 @@
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
     "mocha": "~3.4.2",
-    "@microsoft/node-library-build": "~3.0.1"
+    "@microsoft/node-library-build": "~3.1.0"
   },
   "dependencies": {
     "@types/es6-collections": "0.5.29",
@@ -41,7 +41,7 @@
     "@types/z-schema": "3.16.31",
     "fs-extra": "~0.26.7",
     "jju": "~1.3.0",
-    "typescript": "~2.2.2",
+    "typescript": "2.4.1",
     "z-schema": "~3.17.0"
   }
 }
