--- a/libraries/api-extractor/package.json
+++ b/libraries/api-extractor/package.json
@@ -41,7 +41,7 @@
     "@types/z-schema": "3.16.31",
     "fs-extra": "~0.26.7",
     "jju": "~1.3.0",
-    "typescript": "2.4.1",
+    "typescript": "~2.4.1",
     "z-schema": "~3.17.0"
   }
 }
