--- a/core-build/gulp-core-build-karma/package.json
+++ b/core-build/gulp-core-build-karma/package.json
@@ -15,7 +15,7 @@
     "test": "gulp"
   },
   "dependencies": {
-    "@microsoft/gulp-core-build": ">=2.7.0 <3.0.0",
+    "@microsoft/gulp-core-build": "2.7.1",
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
     "gulp-karma": "~0.0.5",
@@ -36,7 +36,7 @@
     "webpack": "~1.13.0"
   },
   "devDependencies": {
-    "@microsoft/node-library-build": "~3.1.0",
+    "@microsoft/node-library-build": "~3.2.0",
     "@types/gulp": "3.8.32",
     "@types/karma": "0.13.33",
     "@types/bluebird": "3.5.3"
