--- a/core-build/gulp-core-build-mocha/package.json
+++ b/core-build/gulp-core-build-mocha/package.json
@@ -15,14 +15,14 @@
     "test": "gulp"
   },
   "dependencies": {
-    "@microsoft/gulp-core-build": ">=2.7.0 <3.0.0",
+    "@microsoft/gulp-core-build": "2.7.1",
     "@types/node": "6.0.62",
     "gulp": "~3.9.1",
     "gulp-istanbul": "~0.10.3",
     "gulp-mocha": "~2.2.0"
   },
   "devDependencies": {
-    "@microsoft/node-library-build": "~3.1.0",
+    "@microsoft/node-library-build": "~3.2.0",
     "@types/gulp": "3.8.32",
     "@types/gulp-istanbul": "0.9.30",
     "@types/gulp-mocha": "0.0.29",
