--- a/core-build/gulp-core-build-sass/package.json
+++ b/core-build/gulp-core-build-sass/package.json
@@ -15,7 +15,7 @@
     "test": "gulp"
   },
   "dependencies": {
-    "@microsoft/gulp-core-build": ">=2.7.0 <3.0.0",
+    "@microsoft/gulp-core-build": "2.7.1",
     "@microsoft/load-themed-styles": "~1.5.1",
     "@types/node": "6.0.62",
     "autoprefixer": "6.3.7",
@@ -30,7 +30,7 @@
     "postcss-modules": "~0.6.4"
   },
   "devDependencies": {
-    "@microsoft/node-library-build": "~3.1.0",
+    "@microsoft/node-library-build": "~3.2.0",
     "@types/express": "4.0.35",
     "@types/express-serve-static-core": "4.0.41",
     "@types/gulp": "3.8.32",
