--- a/core-build/node-library-build/package.json
+++ b/core-build/node-library-build/package.json
@@ -16,9 +16,9 @@
   },
   "dependencies": {
     "@types/es6-collections": "0.5.29",
-    "@microsoft/gulp-core-build": ">=2.7.0 <3.0.0",
-    "@microsoft/gulp-core-build-mocha": ">=2.1.1 <3.0.0",
-    "@microsoft/gulp-core-build-typescript": ">=3.3.0 <4.0.0",
+    "@microsoft/gulp-core-build": "2.7.1",
+    "@microsoft/gulp-core-build-mocha": "2.1.1",
+    "@microsoft/gulp-core-build-typescript": "3.3.0",
     "@types/gulp": "3.8.32",
     "@types/node": "6.0.62",
     "gulp": "~3.9.1"
