--- a/core-build/web-library-build/package.json
+++ b/core-build/web-library-build/package.json
@@ -18,12 +18,12 @@
   "typings": "lib/index.d.ts",
   "dependencies": {
     "@types/es6-collections": "0.5.29",
-    "@microsoft/gulp-core-build": ">=2.7.0 <3.0.0",
-    "@microsoft/gulp-core-build-karma": ">=2.3.1 <3.0.0",
-    "@microsoft/gulp-core-build-sass": ">=3.2.2 <4.0.0",
-    "@microsoft/gulp-core-build-serve": ">=2.1.4 <3.0.0",
-    "@microsoft/gulp-core-build-typescript": ">=3.3.0 <4.0.0",
-    "@microsoft/gulp-core-build-webpack": ">=1.2.1 <2.0.0",
+    "@microsoft/gulp-core-build": "2.7.1",
+    "@microsoft/gulp-core-build-karma": "2.3.1",
+    "@microsoft/gulp-core-build-sass": "3.2.2",
+    "@microsoft/gulp-core-build-serve": "2.1.4",
+    "@microsoft/gulp-core-build-typescript": "3.3.0",
+    "@microsoft/gulp-core-build-webpack": "1.2.1",
     "@types/gulp": "3.8.32",
     "@types/node": "6.0.62",
     "gulp": "~3.9.1",
