--- a/core-build/gulp-core-build-typescript/package.json
+++ b/core-build/gulp-core-build-typescript/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@microsoft/gulp-core-build": "2.7.1",
-    "@microsoft/api-extractor": "~2.3.0",
+    "@microsoft/api-extractor": "2.3.0",
     "@types/gulp": "3.8.32",
     "@types/node": "6.0.62",
     "fs-extra": "~0.26.7",
