Revert "Use a local modified copy of semver types. Will switch back to offical @types/semver when it is updated."
This reverts commit ce0b7f4d1caedc9761b4d06ee23fde387bb48e9d.

--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -38,6 +38,7 @@
     "@types/lodash": "4.14.52",
     "@types/sinon": "1.16.34",
     "@types/mocha": "2.2.38",
-    "@types/chai": "3.4.34"
+    "@types/chai": "3.4.34",
+    "@types/semver": "5.3.31"
   }
 }
