--- a/webpack/set-webpack-public-path-plugin/package.json
+++ b/webpack/set-webpack-public-path-plugin/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@microsoft/loader-set-webpack-public-path",
-  "version": "2.1.1",
-  "description": "This loader sets the webpack public path at runtime.",
+  "name": "@microsoft/set-webpack-public-path-plugin",
+  "version": "1.0.0",
+  "description": "This plugin sets the webpack public path at runtime.",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "license": "MIT",
@@ -12,7 +12,6 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/set-webpack-public-path-plugin": "~1.0.0",
     "loader-utils": "~1.1.0",
     "uglify-js": "~2.8.22",
     "lodash": "~4.15.0",
