Moving the set-webpack-public-path-plugin package to the right approved packages file.

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -54,6 +54,10 @@
       "allowedCategories": [ "libraries" ]
     },
     {
+      "name": "@microsoft/set-webpack-public-path-plugin",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "@microsoft/sp-tslint-rules",
       "allowedCategories": [ "libraries" ]
     },
