Restricting what gets published to NPM.

--- a/apps/rush/.npmignore
+++ b/apps/rush/.npmignore
@@ -9,6 +9,7 @@
 
 # Ignore certain files in the above folder
 /dist/*.stats.*
+/lib/*/tests/*
 
 # NOTE: These don't need to be specified, because NPM includes them automatically.
 #
