--- a/libraries/package-deps-hash/.npmignore
+++ b/libraries/package-deps-hash/.npmignore
@@ -9,7 +9,7 @@
 
 # Ignore certain files in the above folder
 /dist/*.stats.*
-/lib/*/tests/*
+/lib/*/test/*
 
 # NOTE: These don't need to be specified, because NPM includes them automatically.
 #
