--- a/core-build/gulp-core-build/package.json
+++ b/core-build/gulp-core-build/package.json
@@ -43,6 +43,7 @@
     "node-notifier": "~5.0.2",
     "@types/node-notifier": "0.0.28",
     "object-assign": "~4.1.0",
+    "orchestrator": "~0.3.8",
     "pretty-hrtime": "~1.0.2",
     "rimraf": "~2.5.4",
     "semver": "~5.3.0",
