--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ script:
   - echo 'Installing...' && echo -en 'travis_fold:start:install\\r'
   - node common/local-rush/node_modules/@microsoft/rush/lib/rush.js install --bypass-policy
   - echo -en 'travis_fold:end:install\\r'
+  - echo 'Running rush check' && echo -en 'travis_fold:start:check\\r'
+  - node common/local-rush/node_modules/@microsoft/rush/lib/rush.js check
+  - echo -en 'travis_fold:end:check\\r'
   - echo 'Building...' && echo -en 'travis_fold:start:build\\r'
   - node common/local-rush/node_modules/@microsoft/rush/lib/rush.js rebuild --verbose --production
   - echo -en 'travis_fold:end:build\\r'
