Ensuring load-themed-styles publishes a lib-amd directory.

--- a/libraries/load-themed-styles/.npmignore
+++ b/libraries/load-themed-styles/.npmignore
@@ -4,6 +4,7 @@
 # Use negative patterns to bring back the specific things we want to publish
 !/bin/**
 !/lib/**
+!/lib-amd/**
 !/dist/**
 !ThirdPartyNotice.txt
 
