--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -2,6 +2,10 @@
 {
   "packages": [
     {
+      "name": "js-yaml",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "orchestrator",
       "allowedCategories": [ "libraries" ]
     }
