Rush generate and add tar as a dependency for Rush

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -4,6 +4,10 @@
     {
       "name": "orchestrator",
       "allowedCategories": [ "libraries" ]
+    },
+    {
+      "name": "tar",
+      "allowedCategories": [ "libraries" ]
     }
   ]
 }
