--- a/apps/rush/package.json
+++ b/apps/rush/package.json
@@ -43,6 +43,7 @@
     "npm-package-arg": "~5.1.2",
     "read-package-tree": "~5.1.5",
     "semver": "~5.3.0",
+    "tar": "~3.1.12",
     "wordwrap": "~1.0.0"
   },
   "devDependencies": {
@@ -56,6 +57,7 @@
     "@types/mocha": "2.2.38",
     "@types/node": "6.0.62",
     "@types/semver": "5.3.33",
+    "@types/tar": "1.0.29",
     "chai": "~3.5.0",
     "gulp": "~3.9.1"
   }
