--- a/apps/rush/package.json
+++ b/apps/rush/package.json
@@ -38,6 +38,7 @@
     "glob": "~7.0.5",
     "glob-escape": "~0.0.1",
     "inquirer": "~1.2.1",
+    "js-yaml": "~3.9.1",
     "lodash": "~4.15.0",
     "minimatch": "~3.0.2",
     "npm-package-arg": "~5.1.2",
@@ -51,6 +52,7 @@
     "@types/es6-collections": "0.5.29",
     "@types/fs-extra": "0.0.37",
     "@types/glob": "5.0.30",
+    "@types/js-yaml": "~3.5.31",
     "@types/lodash": "4.14.52",
     "@types/minimatch": "2.0.29",
     "@types/mocha": "2.2.38",
