Ian and I discussed the plan for **api-documenter**, and decided that it should be published separately from **api-extractor**.

--- a/libraries/api-documenter/package.json
+++ b/libraries/api-documenter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-documenter",
+  "name": "@microsoft/api-documenter",
   "version": "0.1.0",
   "description": "Read JSON files from api-extractor, generate documentation pages",
   "repository": {
