--- a/libraries/api-documenter/tsconfig.json
+++ b/libraries/api-documenter/tsconfig.json
@@ -11,6 +11,12 @@
       "es6-collections",
       "node"
     ],
+    "lib": [
+      "es5",
+      "scripthost",
+      "es2015.promise",
+      "dom"
+    ],
     "strictNullChecks": true
   }
 }
