--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -42,6 +42,10 @@
       "allowedCategories": [ "libraries", "other" ]
     },
     {
+      "name": "@microsoft/node-core-library",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "@microsoft/node-library-build",
       "allowedCategories": [ "libraries" ]
     },
@@ -318,6 +322,10 @@
       "allowedCategories": [ "libraries" ]
     },
     {
+      "name": "orchestrator",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "phantomjs-polyfill",
       "allowedCategories": [ "libraries" ]
     },
@@ -355,6 +363,10 @@
     },
     {
       "name": "sudo",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
+      "name": "tar",
       "allowedCategories": [ "libraries" ]
     },
     {
