--- a/libraries/api-documenter/package.json
+++ b/libraries/api-documenter/package.json
@@ -15,12 +15,17 @@
   },
   "devDependencies": {
     "@microsoft/node-library-build": "~3.3.2",
+    "@microsoft/node-core-library": "~0.1.3",
+    "@types/chai": "3.4.34",
     "@types/colors": "~1.1.3",
     "@types/es6-collections": "0.5.29",
     "@types/fs-extra": "0.0.37",
     "@types/js-yaml": "~3.9.1",
+    "@types/mocha": "2.2.38",
     "@types/node": "6.0.62",
-    "gulp": "~3.9.1"
+    "chai": "~3.5.0",
+    "gulp": "~3.9.1",
+    "mocha": "~3.4.2"
   },
   "dependencies": {
     "@microsoft/api-extractor": "2.3.5",
