--- a/libraries/api-documenter/package.json
+++ b/libraries/api-documenter/package.json
@@ -17,10 +17,10 @@
     "@microsoft/node-library-build": "~3.3.2",
     "@microsoft/node-core-library": "~0.1.3",
     "@types/chai": "3.4.34",
-    "@types/colors": "~1.1.3",
+    "@types/colors": "1.1.3",
     "@types/es6-collections": "0.5.29",
     "@types/fs-extra": "0.0.37",
-    "@types/js-yaml": "~3.9.1",
+    "@types/js-yaml": "3.9.1",
     "@types/mocha": "2.2.38",
     "@types/node": "6.0.62",
     "chai": "~3.5.0",
