--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -16,6 +16,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@microsoft/node-core-library": "~0.1.3",
     "@microsoft/stream-collator": "~2.0.4",
     "@types/es6-collections": "0.5.29",
     "@types/fs-extra": "0.0.37",
