--- a/apps/rush/package.json
+++ b/apps/rush/package.json
@@ -28,6 +28,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@microsoft/node-core-library": "~0.1.3",
     "@microsoft/package-deps-hash": "~2.0.6",
     "@microsoft/rush-lib": "3.0.13",
     "@microsoft/stream-collator": "~2.0.4",
@@ -49,7 +50,7 @@
   "devDependencies": {
     "@microsoft/node-library-build": "~3.3.2",
     "@types/chai": "3.4.34",
-    "@types/colors": "~1.1.3",
+    "@types/colors": "1.1.3",
     "@types/es6-collections": "0.5.29",
     "@types/fs-extra": "0.0.37",
     "@types/glob": "5.0.30",
