--- a/core-build/gulp-core-build/package.json
+++ b/core-build/gulp-core-build/package.json
@@ -15,12 +15,14 @@
   "typings": "lib/index.d.ts",
   "license": "MIT",
   "dependencies": {
+    "@microsoft/node-core-library": "~0.1.3",
     "@types/assertion-error": "1.0.30",
     "@types/chai": "3.4.34",
     "@types/gulp": "3.8.32",
     "@types/gulp-util": "3.0.30",
     "@types/mocha": "2.2.38",
     "@types/node": "6.0.62",
+    "@types/node-notifier": "0.0.28",
     "@types/orchestrator": "0.0.30",
     "@types/q": "0.0.32",
     "@types/rimraf": "0.0.28",
@@ -31,8 +33,8 @@
     "del": "^2.2.2",
     "end-of-stream": "~1.1.0",
     "fs-extra": "~0.26.7",
-    "globby": "~5.0.0",
     "glob-escape": "~0.0.1",
+    "globby": "~5.0.0",
     "gulp": "~3.9.1",
     "gulp-flatten": "~0.2.0",
     "gulp-if": "^2.0.1",
@@ -41,7 +43,6 @@
     "lodash.merge": "~4.3.2",
     "merge2": "~1.0.2",
     "node-notifier": "~5.0.2",
-    "@types/node-notifier": "0.0.28",
     "object-assign": "~4.1.0",
     "orchestrator": "~0.3.8",
     "pretty-hrtime": "~1.0.2",
