Upgrading webpack to 3.5.5

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -74,6 +74,10 @@
       "allowedCategories": [ "libraries", "other" ]
     },
     {
+      "name": "ajv",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "argparse",
       "allowedCategories": [ "libraries" ]
     },
