Remove es6-collections from package.json and tsconfig.json

--- a/apps/rush-lib/tsconfig.json
+++ b/apps/rush-lib/tsconfig.json
@@ -6,8 +6,9 @@
     "jsx": "react",
     "declaration": true,
     "sourceMap": true,
-    "types": [
-      "es6-collections"
+    "lib": [
+      "es5",
+      "es2015.collection"
     ]
   }
 }
