--- a/core-build/node-library-build/tsconfig.json
+++ b/core-build/node-library-build/tsconfig.json
@@ -6,8 +6,11 @@
     "sourceMap": true,
     "strictNullChecks": true,
     "types": [
-      "es6-collections",
       "node"
+    ],
+    "lib": [
+      "es5",
+      "es2015.collection"
     ]
   }
 }
