--- a/apps/rush/tsconfig.json
+++ b/apps/rush/tsconfig.json
@@ -9,12 +9,12 @@
     "outDir": "lib",
     "listFiles": false,
     "types": [
-      "es6-collections",
       "mocha"
     ],
     "lib": [
       "es5",
       "scripthost",
+      "es2015.collection",
       "es2015.promise",
       "dom"
     ]
