--- a/libraries/api-documenter/tsconfig.json
+++ b/libraries/api-documenter/tsconfig.json
@@ -8,12 +8,12 @@
     "sourceMap": true,
     "experimentalDecorators": true,
     "types": [
-      "es6-collections",
       "node"
     ],
     "lib": [
       "es5",
       "scripthost",
+      "es2015.collection",
       "es2015.promise",
       "dom"
     ],
