--- a/libraries/node-core-library/tsconfig.json
+++ b/libraries/node-core-library/tsconfig.json
@@ -7,12 +7,12 @@
     "sourceMap": true,
     "experimentalDecorators": true,
     "types": [
-      "es6-collections",
       "node"
     ],
     "lib": [
       "es5",
       "scripthost",
+      "es2015.collection",
       "es2015.promise",
       "dom"
     ],
