--- a/libraries/ts-command-line/tsconfig.json
+++ b/libraries/ts-command-line/tsconfig.json
@@ -7,8 +7,11 @@
     "declaration": true,
     "sourceMap": true,
     "types": [
-      "node",
-      "es6-collections"
+      "node"
+    ],
+    "lib": [
+      "es5",
+      "es2015.collection"
     ]
   }
 }
