--- a/core-build/gulp-core-build-typescript/tsconfig.json
+++ b/core-build/gulp-core-build-typescript/tsconfig.json
@@ -9,6 +9,10 @@
     "strictNullChecks": true,
     "types": [
       "node"
+    ],
+    "lib": [
+      "es5",
+      "es2015.collection"
     ]
   }
 }
