Get PNPM to compile!

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -1,4 +1,9 @@
 // DO NOT ADD COMMENTS IN THIS FILE.  They will be lost when the Rush tool resaves it.
 {
-  "packages": []
+  "packages": [
+    {
+      "name": "chalk",
+      "allowedCategories": [ "libraries" ]
+    }
+  ]
 }
