--- a/core-build/gulp-core-build-karma/tsconfig.json
+++ b/core-build/gulp-core-build-karma/tsconfig.json
@@ -9,6 +9,9 @@
     "types": [
       "node"
     ],
+    "typeRoots": [
+      "./node_modules/@types"
+    ],
     "lib": [
       "es5",
       "es2015.iterable"
