--- a/core-build/gulp-core-build-serve/package.json
+++ b/core-build/gulp-core-build-serve/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@microsoft/gulp-core-build": "3.1.0",
+    "@types/chalk": "0.4.31",
     "@types/node": "6.0.88",
+    "chalk": "~2.1.0",
     "deasync": "~0.1.7",
     "express": "~4.14.0",
     "gulp": "~3.9.1",
@@ -30,11 +32,11 @@
     "@microsoft/node-library-build": "~3.2.0",
     "@types/express": "4.0.35",
     "@types/express-serve-static-core": "4.0.41",
-    "@types/gulp": "3.8.32",
+    "@types/gulp": "3.8.33",
     "@types/gulp-util": "3.0.30",
     "@types/mime": "0.0.29",
     "@types/node-forge": "0.6.8",
-    "@types/orchestrator": "0.0.30",
+    "@types/orchestrator": "0.3.0",
     "@types/q": "0.0.32",
     "@types/serve-static": "1.7.31",
     "@types/through2": "2.0.32",
