--- a/core-build/gulp-core-build/package.json
+++ b/core-build/gulp-core-build/package.json
@@ -17,19 +17,21 @@
   "dependencies": {
     "@microsoft/node-core-library": "~0.3.0",
     "@types/assertion-error": "1.0.30",
+    "@types/chalk": "0.4.31",
     "@types/chai": "3.4.34",
-    "@types/gulp": "3.8.32",
+    "@types/gulp": "3.8.33",
     "@types/gulp-util": "3.0.30",
     "@types/mocha": "2.2.38",
     "@types/node": "6.0.88",
     "@types/node-notifier": "0.0.28",
-    "@types/orchestrator": "0.0.30",
+    "@types/orchestrator": "0.3.0",
     "@types/q": "0.0.32",
     "@types/rimraf": "0.0.28",
     "@types/semver": "5.3.33",
     "@types/through2": "2.0.32",
     "@types/vinyl": "1.2.30",
     "@types/yargs": "0.0.34",
+    "chalk": "~2.1.0",
     "del": "^2.2.2",
     "end-of-stream": "~1.1.0",
     "fs-extra": "~0.26.7",
