--- a/apps/rush-lib/tsconfig.json
+++ b/apps/rush-lib/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "forceConsistentCasingInFileNames": true,
+    "strictNullChecks": true,
     "module": "commonjs",
     "jsx": "react",
     "declaration": true,
