Turn on strictNullChecks.

--- a/libraries/ts-command-line/tsconfig.json
+++ b/libraries/ts-command-line/tsconfig.json
@@ -6,6 +6,7 @@
     "jsx": "react",
     "declaration": true,
     "sourceMap": true,
+    "strictNullChecks": true,
     "types": [
       "node"
     ],
