Reenabled the JSON generator

--- a/libraries/api-extractor/testInputs/example1/api-extractor-config.json
+++ b/libraries/api-extractor/testInputs/example1/api-extractor-config.json
@@ -4,12 +4,12 @@
     "rootFolder": "."
   },
   "project": {
-    "entryPointSourceFile": "src/index.ts"
+    "entryPointSourceFile": "index.ts"
   },
   "apiReviewFile": {
     "enabled": false
   },
   "apiJsonFile": {
-    "enabled": false
+    "enabled": true
   }
 }
