Convert tests in test-web-library-build to use jest

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -86,6 +86,10 @@
       "allowedCategories": [ "libraries" ]
     },
     {
+      "name": "babel-jest",
+      "allowedCategories": [ "other" ]
+    },
+    {
       "name": "builtins",
       "allowedCategories": [ "libraries" ]
     },
