Add the workaround for converting jest output from stderr to stdout.

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -239,11 +239,11 @@
     },
     {
       "name": "jest",
-      "allowedCategories": [ "libraries" ]
+      "allowedCategories": [ "libraries", "other" ]
     },
     {
       "name": "jest-cli",
-      "allowedCategories": [ "libraries" ]
+      "allowedCategories": [ "libraries", "other" ]
     },
     {
       "name": "jju",
