--- a/libraries/api-extractor/package.json
+++ b/libraries/api-extractor/package.json
@@ -20,6 +20,9 @@
   "homepage": "http://aka.ms/extractor",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
+  "bin": {
+    "api-extractor": "./bin/api-extractor"
+  },  
   "license": "MIT",
   "scripts": {
     "build": "gulp",
