Add "namespaceSupport" policy setting

--- a/libraries/api-extractor/src/extractor/api-extractor-config-default.json
+++ b/libraries/api-extractor/src/extractor/api-extractor-config-default.json
@@ -7,6 +7,10 @@
     "externalJsonFileFolders": [ ]
   },
 
+  "policies": {
+    "namespaceSupport": "conservative"
+  },
+
   "apiReviewFile": {
     "enabled": true,
     "apiReviewFolder": "./etc",
