Introduce a Jest task (#391)
* Introduce a jest task

* Use ~ instead ^ in package.json

* Update shrinkwrap file

* Update api.ts files

* Update documentations in JestTask and make config parameters optional

* Add Jest to test-web-library-build (WIP)

* Convert api-documenter to use jest instead of mocha

* Convert tests in test-web-library-build to use jest

* Add the workaround for converting jest output from stderr to stdout.

* Add change file for the Jest task

* Ping types log4js to avoid broken types karma packages.

* Fix preCopyTest in test-web-library-build to use ES5

* Add isEnabled to jest.json and let it control whether tests run in jest or mocha/karma. And add more defaults to JestTask.

* Set collectCoverageFrom to get complete coverage.

* Update other api.ts files

* Update shrinkwrap file

* Rename isJestEnabled to _isJestEnabled

* Remove runInBand and maxWorkers from jest config.

* Add change files

* Copy snapshots from src to lib before Jest test and from lib to src if updating snapshots.

* Add a missing change file

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -234,6 +234,14 @@
       "allowedCategories": [ "libraries" ]
     },
     {
+      "name": "jest",
+      "allowedCategories": [ "libraries", "other" ]
+    },
+    {
+      "name": "jest-cli",
+      "allowedCategories": [ "libraries", "other" ]
+    },
+    {
       "name": "jju",
       "allowedCategories": [ "libraries" ]
     },
