--- a/apps/api-documenter/package.json
+++ b/apps/api-documenter/package.json
@@ -18,14 +18,14 @@
   },
   "dependencies": {
     "@microsoft/api-extractor": "4.2.3",
-    "@microsoft/node-core-library": "~0.3.13",
-    "@microsoft/ts-command-line": "~2.2.1",
+    "@microsoft/node-core-library": "0.3.13",
+    "@microsoft/ts-command-line": "2.2.1",
     "colors": "~1.1.2",
     "fs-extra": "~0.26.7",
     "js-yaml": "~3.9.1"
   },
   "devDependencies": {
-    "@microsoft/node-library-build": "~4.2.4",
+    "@microsoft/node-library-build": "4.2.4",
     "@types/colors": "1.1.3",
     "@types/fs-extra": "0.0.37",
     "@types/js-yaml": "3.9.1",
