--- a/apps/api-extractor/package.json
+++ b/apps/api-extractor/package.json
@@ -30,8 +30,8 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/node-core-library": "~0.3.13",
-    "@microsoft/ts-command-line": "~2.2.1",
+    "@microsoft/node-core-library": "0.3.13",
+    "@microsoft/ts-command-line": "2.2.1",
     "@types/fs-extra": "0.0.37",
     "@types/node": "6.0.88",
     "@types/z-schema": "3.16.31",
@@ -50,6 +50,6 @@
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
     "mocha": "~3.4.2",
-    "@microsoft/node-library-build": "~4.2.3"
+    "@microsoft/node-library-build": "4.2.3"
   }
 }
