--- a/core-build/gulp-core-build-sass/package.json
+++ b/core-build/gulp-core-build-sass/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@microsoft/gulp-core-build": "3.2.4",
-    "@microsoft/load-themed-styles": "~1.7.6",
+    "@microsoft/load-themed-styles": "1.7.6",
     "@types/node": "6.0.88",
     "autoprefixer": "6.3.7",
     "gulp": "~3.9.1",
@@ -30,7 +30,7 @@
     "postcss-modules": "~0.6.4"
   },
   "devDependencies": {
-    "@microsoft/node-library-build": "~4.2.3",
+    "@microsoft/node-library-build": "4.2.3",
     "@types/express": "4.0.35",
     "@types/express-serve-static-core": "4.0.41",
     "@types/gulp": "3.8.32",
