--- a/core-build/gulp-core-build/package.json
+++ b/core-build/gulp-core-build/package.json
@@ -15,7 +15,7 @@
   "typings": "lib/index.d.ts",
   "license": "MIT",
   "dependencies": {
-    "@microsoft/node-core-library": "~0.3.13",
+    "@microsoft/node-core-library": "0.3.13",
     "@types/assertion-error": "1.0.30",
     "@types/chai": "3.4.34",
     "@types/chalk": "0.4.31",
@@ -57,7 +57,7 @@
   },
   "devDependencies": {
     "@types/z-schema": "3.16.31",
-    "@microsoft/node-library-build": "~4.2.3",
+    "@microsoft/node-library-build": "4.2.3",
     "chai": "~3.5.0"
   }
 }
