--- a/webpack/loader-load-themed-styles/package.json
+++ b/webpack/loader-load-themed-styles/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "loader-utils": "~1.1.0",
-    "@microsoft/load-themed-styles": "~1.7.6"
+    "@microsoft/load-themed-styles": "1.7.6"
   },
   "devDependencies": {
     "@types/mocha": "2.2.38",
@@ -22,6 +22,6 @@
     "@types/webpack": "3.0.11",
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
-    "@microsoft/node-library-build": "~4.2.4"
+    "@microsoft/node-library-build": "4.2.4"
   }
 }
