--- a/webpack/loader-set-webpack-public-path/package.json
+++ b/webpack/loader-set-webpack-public-path/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@types/node": "6.0.88",
-    "@microsoft/set-webpack-public-path-plugin": "~1.3.1",
+    "@microsoft/set-webpack-public-path-plugin": "1.3.1",
     "loader-utils": "~1.1.0",
     "lodash": "~4.15.0"
   },
@@ -23,6 +23,6 @@
     "chai": "~3.5.0",
     "gulp": "~3.9.1",
     "mocha": "~3.4.2",
-    "@microsoft/node-library-build": "~4.2.4"
+    "@microsoft/node-library-build": "4.2.4"
   }
 }
