Update all package.json files

--- a/apps/api-documenter/package.json
+++ b/apps/api-documenter/package.json
@@ -9,9 +9,7 @@
   "homepage": "http://aka.ms/extractor",
   "license": "MIT",
   "scripts": {
-    "build": "gulp",
-    "clean": "gulp clean",
-    "test": "gulp test"
+    "build": "gulp test --clean"
   },
   "bin": {
     "api-documenter": "./bin/api-documenter"
