--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -10,9 +10,7 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "build": "gulp",
-    "test": "gulp test",
-    "clean": "gulp clean"
+    "build": "gulp test --clean"
   },
   "license": "MIT",
   "dependencies": {
