--- a/libraries/ts-command-line/package.json
+++ b/libraries/ts-command-line/package.json
@@ -9,9 +9,7 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "build": "gulp",
-    "test": "gulp test",
-    "clean": "gulp clean"
+    "build": "gulp test --clean"
   },
   "license": "MIT",
   "dependencies": {
