--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -366,6 +366,10 @@
       "allowedCategories": [ "libraries" ]
     },
     {
+      "name": "strict-uri-encode",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "sudo",
       "allowedCategories": [ "libraries" ]
     },
